[tool.poetry]
name = "bytes32"
version = "0.0.1"
description = ""
authors = ["Louis Garoche <louis@garoche.me>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.30.0"
requests = "^2.28.1"
pydantic = "^1.9.1"
dag-cbor = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
