[tool.poetry]
name = "relayer"
version = "0.1.0"
description = ""
authors = ["Louis Garoche <louis@garoche.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
multiformats = "^0.1.4"
dag-cbor = "^0.2.2"
uvicorn = "^0.18.2"
bytes32 = {path = "../core", develop=true}

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "relayer.service:main"